; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/e1000e/extr_ich8lan.c_e1000e_gig_downshift_workaround_ich8lan.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/e1000e/extr_ich8lan.c_e1000e_gig_downshift_workaround_ich8lan.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.e1000_hw = type { %struct.TYPE_4__, %struct.TYPE_3__ }
%struct.TYPE_4__ = type { i64 }
%struct.TYPE_3__ = type { i64 }

@e1000_ich8lan = common dso_local global i64 0, align 8
@e1000_phy_ife = common dso_local global i64 0, align 8
@E1000_KMRNCTRLSTA_DIAG_OFFSET = common dso_local global i32 0, align 4
@E1000_KMRNCTRLSTA_DIAG_NELPBK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @e1000e_gig_downshift_workaround_ich8lan(%struct.e1000_hw* %0) #0 {
  %2 = alloca %struct.e1000_hw*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store %struct.e1000_hw* %0, %struct.e1000_hw** %2, align 8
  %5 = load %struct.e1000_hw*, %struct.e1000_hw** %2, align 8
  %6 = getelementptr inbounds %struct.e1000_hw, %struct.e1000_hw* %5, i32 0, i32 1
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load i64, i64* @e1000_ich8lan, align 8
  %10 = icmp ne i64 %8, %9
  br i1 %10, label %18, label %11

11:                                               ; preds = %1
  %12 = load %struct.e1000_hw*, %struct.e1000_hw** %2, align 8
  %13 = getelementptr inbounds %struct.e1000_hw, %struct.e1000_hw* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = load i64, i64* @e1000_phy_ife, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %19

18:                                               ; preds = %11, %1
  br label %46

19:                                               ; preds = %11
  %20 = load %struct.e1000_hw*, %struct.e1000_hw** %2, align 8
  %21 = load i32, i32* @E1000_KMRNCTRLSTA_DIAG_OFFSET, align 4
  %22 = call i64 @e1000e_read_kmrn_reg(%struct.e1000_hw* %20, i32 %21, i32* %4)
  store i64 %22, i64* %3, align 8
  %23 = load i64, i64* %3, align 8
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %26

25:                                               ; preds = %19
  br label %46

26:                                               ; preds = %19
  %27 = load i32, i32* @E1000_KMRNCTRLSTA_DIAG_NELPBK, align 4
  %28 = load i32, i32* %4, align 4
  %29 = or i32 %28, %27
  store i32 %29, i32* %4, align 4
  %30 = load %struct.e1000_hw*, %struct.e1000_hw** %2, align 8
  %31 = load i32, i32* @E1000_KMRNCTRLSTA_DIAG_OFFSET, align 4
  %32 = load i32, i32* %4, align 4
  %33 = call i64 @e1000e_write_kmrn_reg(%struct.e1000_hw* %30, i32 %31, i32 %32)
  store i64 %33, i64* %3, align 8
  %34 = load i64, i64* %3, align 8
  %35 = icmp ne i64 %34, 0
  br i1 %35, label %36, label %37

36:                                               ; preds = %26
  br label %46

37:                                               ; preds = %26
  %38 = load i32, i32* @E1000_KMRNCTRLSTA_DIAG_NELPBK, align 4
  %39 = xor i32 %38, -1
  %40 = load i32, i32* %4, align 4
  %41 = and i32 %40, %39
  store i32 %41, i32* %4, align 4
  %42 = load %struct.e1000_hw*, %struct.e1000_hw** %2, align 8
  %43 = load i32, i32* @E1000_KMRNCTRLSTA_DIAG_OFFSET, align 4
  %44 = load i32, i32* %4, align 4
  %45 = call i64 @e1000e_write_kmrn_reg(%struct.e1000_hw* %42, i32 %43, i32 %44)
  br label %46

46:                                               ; preds = %37, %36, %25, %18
  ret void
}

declare dso_local i64 @e1000e_read_kmrn_reg(%struct.e1000_hw*, i32, i32*) #1

declare dso_local i64 @e1000e_write_kmrn_reg(%struct.e1000_hw*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
